# set-game

./: .gitignore  .travis.yml  ConsoleGame  LICENSE  Main.hs  Set.hs  setgame.cabal
src/: ConsoleGame.hs  NoSet.hs  Set.alt.hs  Set.hs  SetGame.hs
src/Set/: Ascii.hi  Ascii.hs  Card.hs  Game.hs  GameLogic.hs  Utils.hi  Utils.hs
