name:		setgame
version:	1.1
license:	BSD3
license-file:	LICENSE
maintainer:	emertens@gmail.com
synopsis:	A console interface to the game of Set
build-type: Simple
cabal-version: >=1.2

executable set-game
  main-is: SetGame.hs
  build-depends:	base == 4.*,
                        editline == 0.2.*,
                        random == 1.0.*,
                        terminfo == 0.3.*,
                        vty == 4.2.*
  hs-source-dirs: src
  ghc-options: -Wall
