name:		setgame
version:	1.1
category:	Game
license:	BSD3
license-file:	LICENSE
maintainer:	emertens@gmail.com
synopsis:	A console interface to the game of Set
description:	A console interface to the game of Set
build-type: Simple
cabal-version: >=1.8

library
  build-depends:        base == 4.*,
                        random,
                        terminfo,
                        vty == 5.*
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: SetGame,
                   Set.Ascii,
                   Set.Card,
                   Set.Game,
                   Set.Utils

executable set-game
  main-is: Main.hs
  build-depends: setgame, base
  ghc-options: -Wall -threaded
